[gd_scene load_steps=3 format=3 uid="uid://v74yti66yybr"]

[ext_resource type="Script" uid="uid://bkwaawxqbqso0" path="res://main-menu/title-screen/title_screen.gd" id="1_nocl8"]

[sub_resource type="Theme" id="Theme_v6p8y"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)

[node name="Title-Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nocl8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start-Button" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.111
anchor_top = 0.296
anchor_right = 0.444
anchor_bottom = 0.395
offset_left = 0.127991
offset_top = 0.192001
offset_right = 0.511963
offset_bottom = 0.0399933
theme = SubResource("Theme_v6p8y")
text = "Start"

[node name="Controls-Button" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.111
anchor_top = 0.494
anchor_right = 0.444
anchor_bottom = 0.593
offset_left = 0.127991
offset_top = -0.112
offset_right = 0.511963
offset_bottom = -0.264038
text = "Controls"

[node name="Credits-Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.691
anchor_right = 0.444
anchor_bottom = 0.79
offset_left = 0.127991
offset_top = 0.231964
offset_right = 0.511963
offset_bottom = 0.0799866
text = "Credits"

[connection signal="pressed" from="Panel/Start-Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/Controls-Button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Panel/Credits-Button" to="." method="_on_credits_button_pressed"]
